Version 2.4.0 - The river knows.
----------
201?-??-??

	GonoszTopi:
		* Fix restoring toolbar orientation on 'Cancel'

--------------------------------------------------------------------------------

Version 2.3.2 - The "don't close tabs" version.
----------
2016-09-16

	circulosmeos:
		* amuleweb cookies read behind a "lowercase" proxy (http/2 compliant)

	Dan64:
		* Read AICH root hashes from binary eMuleCollection files

	gnazio:
		* Fixed configure of libpng when sh != bash

	GonoszTopi:
		* Allow any kind of file links in collections
		* Make UPnP log go to the appropriate category (#1681)
		* Use the C++ compiler to check for features we're about to use
		  in C++ source files (#1572)
		* Adapt configure to handle subversion repository clones in
		  mercurial and git
		* Fix bfd detection for systems missing -liberty
		* Add support for 'canceled.met' to the fileview tool
		* Implemented the missing 'show shared' command in amulecmd
		* Fix check for a valid locale config entry being done *after*
		  the locale has been set
		* Fix Crypto++ detection routine happily using build library
		  for host when cross-compiling
		* Fix bug #1711: Kad Info tab should display my own user ID
		* Fix wrong sized images in the priscilla skin
		* Fix bug #1423: Add the possibility to not create sparse files
		* Fix bug #1743: crash when importing part files
		* Review assertions in the eD2k and Kademlia code and remove
		  those that could be triggered by a malformed incoming packet
		* Fix a possible uninitialized variable access and a definite
		  memory leak in the UPnP code

	iz0bbz:
		* Fix WinSock library version detection with MinGW-w64
		* Fix compilation with MinGW-w64

	kam:
		* WebServer serves .json, .manifest and .appacache files

	Mr Hyde:
		* Fix "Disable computer's timed standby mode" for MacOS 10.9 Mavericks
		* Compilation fix on Linux Slackware 64bit and MacOS 10.9.4
		* Fix configure on Mac

	sc0w: